assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');

* {
    margin:0;
    padding:0;
    border:0;
}

body {

    background:#696969 ;
    font-family: "Exo", sans-serif;
    overflow: auto;
    height: 100vh;
    overflow-x: hidden;
   
}

/*---------------------------------------------------------Navigation bar*/

.navbar-brand {
         font-family: "Exo", sans-serif;
         font-weight: 500;
         font-size:30px;
     }

.navbar .navbar-brand:hover {
    color:#e30134;    
}

.navbar-toggler-icon:hover {
     color:#e30134;
}

.nav-link:hover{
         
         border-bottom: 2px solid #e30134 !important
     }


/*------------------------------------------------------------------------------Header*/

.header > div {
    color: #fff;
    background-image: url(../images/piano.jpg);
    padding: 120px 0;
    text-align: center;
    max-width: 100%;
    background-size: cover;
    height: 100vh;

}

.opaque-overlay {

position: absolute;
top: 0;
left: 0;
height: 100vh;
width: 100%;
background-color: rgba(0,0,0,0.5);
    }


.header-title {
    font-size: 50px;
    padding-top: 30px;
    
}




.header-text p {
    margin-top: 10px;
}



/*------------------------------------------------------------------------------Buttons*/

.btn-danger a {
    color:white;
}

.btn-danger {
    border-radius: 10px;
    margin-top: 25px;
}

/*---------------------------------------------------------------Section How it works*/

.description {
      color: white;
      text-align: center;
      background: #e30134;
      width: 100%;     
}

.description-title {
    margin-top: 50px;
    margin-bottom: 50px;
    text-align: center;
    color: #fff;   
}

.description-text {
    font-weight: 500;
    color: white;
    text-align: center;
    align-items: center;
    padding-bottom: 20px;

}

.description-text i{
    color: #fff;
    margin-bottom: 20px;
}


.description-text i:hover{
  
  color: grey;
}



.description-text .museum a {
    text-decoration: none;
    color: white;
}

.description-text .museum a:hover {
    color: grey;
}


/*----------------------------------------------------------------------Section Meet our team*/

.team {

    padding-top: 120px;
    padding-bottom: 160px;
    color: #fff;
    text-align: center;

}

.team-title {
    color: #12151F;
    margin-bottom: 10px;
}
    
.team h3  {
    margin-bottom: 25px;
}

.team h4{
    color:#12151F;
}

/*---------------------------------------------------------------------Team members photos*/
.team-items img {
     
  width:250px;
  height: 250px;
  padding: 10px;
  border-radius:50%;
  margin: 0 auto;
  margin-top: 20px;
  margin-bottom: 10px;
  object-fit: cover;
  filter: gray;
  -webkit-filter: grayscale(20%);

}

/*-------------------------------------------------------------------Section Sign Up form (Book a spot for concerts)*/

.form-section {
    background-color:#696969;
}



.wrapper {
    max-width: 500px;
    width: 100%;
    background:#e30134;
    margin: 20px auto;
    padding: 30px;
    box-shadow: 1px 1px 2px rgba(0,0,0,0.5);

}    

.wrapper .title {
    font-size: 24px;
    font-weight: 700;
    margin-bottom: 60 px;
    text-transform: uppercase;
    text-align: center;
    color:#fff;
    padding-bottom: 15px;
    font-family: "Exo" sans-serif;

}

.wrapper .form {
    width: 100%;
}


.wrapper .form .input-field {

    margin-bottom: 15px;
    display: flex;
    align-items: center;

}

.wrapper .form .input-field label {
    width: 200px;
    color:white;
    margin-right: 10px;
    font-size: 14px;

}

.wrapper .form .input-field input {
    width: 100%;
    outline: none;
    border: 1px solid black;
    font-size: 15px;
    padding: 8px 10px;
    border-radius: 3px;
}

.wrapper .form .inputfield .btn {
    width: 100%;
    padding: 10px 10px;
    padding-bottom: 10px;
    font-size: 15px;
    border: 0;
    background: #12151F;
    border-radius: 5px;
    cursor: pointer;
    color: white;

}


.wrapper .form .inputfield .btn:hover {
    background: grey;

}


/*---------------------------------------------------------------------------Footer*/




footer {
    background-color:#12151F;
    height: auto;
    margin: 0 auto;
    padding-top: 25px;
    padding-bottom: 10px;
    color: #fff;
   
}

footer h1 {
    font-weight: 300;
    font-size: 20px;
    text-align: center;
}


footer i {
    color: white;
    
    
}

footer i:hover {
    color: #e30134;
}

footer .footer-contacts li {
    margin-left: 20px;
}

.footer-contacts  {
    align-items: center;
    
}

